fix: update HistoryPhotoListCreator to use JsonMapper and URI for photo retrieval